substrate/primitives/runtime-interface/tests/ui/no_gaps_in_versions.stderr
error: Unexpected version attribute: missing version '2' for this function
  --> tests/ui/no_gaps_in_versions.rs:30:2
   |
30 |     #[version(3)]
   |     ^
